# action-test-v2

./: .gitignore  CHANGELOG.MD  README.md  build.bat  build_dir.bat  gitmoji.txt  main.py  main.spec  pyproject.toml  requirements.txt  test_connect  update.json
.github/actions/setup-python/: action.yml
.github/workflows/: build.yml  main.yml  release.yml
package/: __init__.py  baiguiyexing.py  daoguantupo.py  huijuan.py  huodong.py  jiejietupo.py  rilun.py  tansuo.py  update.py  xuanshangfengyin.py  yeyuanhuo.py  yongshengzhihai.py  yuhun.py  yuling.py  zhaohuan.py
src/: tansuo.py
src/package/: __init__.py  baiguiyexing.py  daoguantupo.py  huodong.py  jiejietupo.py  juexing.py  qiling.py  rilun.py  tansuo.py  utils.py  xuanshangfengyin.py  yeyuanhuo.py  yongshengzhihai.py  yuhun.py  yuling.py  zhaohuan.py
src/ui/: mainui.py  mainui.ui  update_record.py  update_record.ui  updateui.py  updateui.ui  upgrade_new_version.py  upgrade_new_version.ui
src/utils/: application.py  config.py  coordinate.py  decorator.py  event.py  function.py  gui.py  log.py  mouse.py  myschedule.py  mysignal.py  mythread.py  paddleocr.py  restart.py  toast.py  update.py  upgrade.py  window.py
tests/: test_connect.py  test_resource.py  utils.py
tests/package/: test_baiguiyexing.py  test_daoguantupo.py  test_fightresource.py  test_huodong.py  test_jiejietupo.py  test_qiling.py  test_rilun.py  test_tansuo.py  test_xuanshangfengyin.py  test_yeyuanhuo.py  test_yongshengzhihai.py  test_yuhun.py  test_yuling.py  test_zhaohuan.py  utils.py
ui/: mainui.py  mainui.ui  new170.py  new170.ui  updateui.py  updateui.ui
utils/: application.py  config.py  coordinate.py  decorator.py  event.py  function.py  gui.py  log.py  mouse.py  mysignal.py  mythread.py  toast.py  toaster.py  update.py  upgrade.py  window.py
