[tool.poetry]
name = "onmyoji-python"
version = "1.7.9"
description = "auto for Onmyoji"
authors = ["AquamarineCyan <1057424730@qq.com>"]
readme = "README.md"
repository = "https://github.com/AquamarineCyan/Onmyoji_Python"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
httpx = "^0.26.0"
opencv-python = "^4.9.0.80"
pyautogui = "^0.9.54"
pydantic = "^2.5.3"
pyside6 = "^6.6.1"
pywin32 = "^306"
pyyaml = "^6.0.1"
win11toast = "^0.34"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.3.0"
pytest = "^7.4.4"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "default"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
